Fix sidebar gap between header and menus

--- a/style.css
+++ b/style.css
@@ -141,8 +141,8 @@ body {
 .sidebar {
     display: grid;
     justify-items: left;
-    gap: 13px;
-    grid-template-rows: minmax(50px, 1fr) minmax(20rem, 6fr);
+    gap: 5.5rem;
+    grid-template-rows: 3rem 20rem;
     grid-row: 1 / 3;
     grid-column: 1 / 2;
     background-color: #4ade80;
